// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selectbox component renders correctly 1`] = `
<div
  className="asdfasdf"
>
  <select
    Value="hi"
    aria-describedby=""
    aria-label="placeholder"
    className="select__input"
    data-locator=""
    disabled={false}
    id="abcd"
    name=""
    type="text"
    value="hello"
  >
    <option
      id="abcd_US"
      key="US"
      value="US"
    >
      United States
    </option>
    <option
      id="abcd_CA"
      key="CA"
      value="CA"
    >
      Canada
    </option>
  </select>
  <div
    className="SelectBox__error"
  >
    <div
      aria-disabled="true"
      className=""
    />
  </div>
</div>
`;

exports[`Selectbox component renders correctly with disabled props 1`] = `
<div
  className="asdfasdf"
>
  <select
    Value="hi"
    aria-describedby=""
    aria-label="placeholder"
    className="select__input"
    data-locator=""
    disabled={true}
    id="abcd"
    name=""
    type="text"
    value="hello"
  >
    <option
      id="abcd_US"
      key="US"
      value="US"
    >
      United States
    </option>
    <option
      id="abcd_CA"
      key="CA"
      value="CA"
    >
      Canada
    </option>
  </select>
  <div
    className="SelectBox__error"
  >
    <div
      aria-disabled="true"
      className=""
    />
  </div>
</div>
`;

exports[`Selectbox component renders correctly with touched and error 1`] = `
<div
  className="asdfasdf"
>
  <select
    aria-describedby="selectbox__error__abcd"
    aria-label="first name for user"
    className="select__input"
    data-locator=""
    defaultValue="United States"
    disabled={false}
    id="abcd"
    name=""
    type="text"
    value="some string @@LABEL@@"
  >
    <option
      value=""
    >
      first name for user
    </option>
    <option
      id="abcd_US"
      key="US"
      value="US"
    >
      United States
    </option>
    <option
      id="abcd_CA"
      key="CA"
      value="CA"
    >
      Canada
    </option>
  </select>
  <div
    className="SelectBox__error"
  >
    <div
      aria-disabled="true"
      className="warning-icon"
    />
    <Styled(BodyCopy)
      aria-live="assertive"
      className={null}
      color="error"
      component="div"
      customStyle={Object {}}
      fontFamily="secondary"
      fontSize="fs12"
      fontWeight="extrabold"
      id="selectbox__error__abcd"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      role="alert"
      textAlign="left"
    >
      REQUIRED_FIELD
    </Styled(BodyCopy)>
  </div>
</div>
`;

exports[`Selectbox component renders correctly with touched and warning 1`] = `
<div
  className="asdfasdf"
>
  <select
    aria-describedby="selectbox__error__abcd"
    aria-label=""
    className="select__input"
    data-locator=""
    defaultValue="United States"
    disabled={false}
    id="abcd"
    name=""
    type="text"
    value=""
  >
    <option
      id="abcd_US"
      key="US"
      value="US"
    >
      United States
    </option>
    <option
      id="abcd_CA"
      key="CA"
      value="CA"
    >
      Canada
    </option>
  </select>
  <div
    className="SelectBox__error"
  >
    <div
      aria-disabled="true"
      className=""
    />
  </div>
</div>
`;
